# django-admin-drf

./: db.sqlite3  pyproject.toml
api/: admin.py  urls.py
config/: settings.py
models/: admin.py  apps.py  models.py
models/migrations/: 0001_initial.py
